# Looper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: CMakeLists.txt
Source/Handler/: Handler.cpp  Handler.h
Source/HandlerThread/: HandlerThread.cpp  HandlerThread.h
Source/Looper/: Looper.cpp  Looper.h
Source/LooperManager/: LooperBase.h  LooperManager.cpp  LooperManager.h
Source/Message/: HandlerCallBack.h  Message.cpp  Message.h
Source/MessageQueue/: MessageQueue.cpp  MessageQueue.h
Test/: CMakeLists.txt  Test.cpp
